[package]
name = "tdb-rs"
version = "0.1.1"
edition = "2021"
publish = true
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs",]
description = "Rust crate for Tdb “Text DataBase” format - a plain text human readable typed database storage format."
documentation = "https://docs.rs/tdb-rs/latest/tdb/"
homepage = "https://github.com/mark-summerfield/tdb-rs"
readme = "README.md"
keywords = [ "database", "csv", "parser",]
categories = [ "database", "parsing",]
license = "GPL-3.0"

[dependencies]

[badges.maintenance]
status = "passively-maintained"

[profile.release]
strip = true
opt-level = 3
lto = true
